--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       type="text/css"
     />
     <title>Chaen</title>
-    <link rel="stylesheet" href="../assets/styles/style.css" />
+    <link rel="stylesheet" href="assets/styles/style.css" />
   </head>
   <body>
     <nav>
@@ -72,15 +72,15 @@
               </ul>
             </div>
             <div class="search_container">
-              <img src="../assets/images/left_arrow.svg" alt="left arrow" />
-              <img src="../assets/images/right_arrow.svg" alt="right arrow" />
+              <img src="assets/images/left_arrow.svg" alt="left arrow" />
+              <img src="assets/images/right_arrow.svg" alt="right arrow" />
               <div>
                 <input type="text" />
                 <button>
-                  <img src="../assets/images/search.svg" alt="search icon" />
+                  <img src="assets/images/search.svg" alt="search icon" />
                 </button>
               </div>
-              <img src="../assets/images/star.svg" alt="star(deco)" />
+              <img src="assets/images/star.svg" alt="star(deco)" />
             </div>
             <div class="projects">
               <h2 class="semi_title">Projects</h2>
@@ -157,33 +157,33 @@
               <div class="folderlist">
                 <div class="folder">
                   <img
-                    src="../assets/images/folder_yellow.svg"
+                    src="assets/images/folder_yellow.svg"
                     alt="frontend"
                   />
                   <p>Frontend</p>
                 </div>
                 <div class="folder">
-                  <img src="../assets/images/folder_blue.svg" alt="backend" />
+                  <img src="assets/images/folder_blue.svg" alt="backend" />
                   <p>Backend</p>
                 </div>
                 <div class="folder">
-                  <img src="../assets/images/folder_yellow.svg" alt="design" />
+                  <img src="assets/images/folder_yellow.svg" alt="design" />
                   <p>Design</p>
                 </div>
                 <div class="folder">
                   <img
-                    src="../assets/images/folder_green.svg"
+                    src="assets/images/folder_green.svg"
                     alt="collaborate"
                   />
                   <p>Collaborate</p>
                 </div>
                 <div class="folder">
-                  <img src="../assets/images/folder_red.svg" alt="others" />
+                  <img src="assets/images/folder_red.svg" alt="others" />
                   <p>Others</p>
                 </div>
                 <div class="folder">
                   <img
-                    src="../assets/images/folder_yellow.svg"
+                    src="assets/images/folder_yellow.svg"
                     alt="certificate"
                   />
                   <p>Certificate</p>
