mix button and a according to its function

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               I'm a Frontend Developer who focus on User Experience and Visually
               stunning, Interactive UI
             </p>
-            <a href="#page2"><button class="rounded">LOOK AROUND</button></a>
+            <a href="#page2" class="rounded">LOOK AROUND</a>
           </div>
         </div>
       </section>
@@ -220,7 +220,7 @@
             </div>
             <div class="modal_inner">
               <h5 class="semi_title">Download resume.</h5>
-              <button><a href="#">OK</a></button>
+              <button>OK</button>
             </div>
           </div>
           <div class="modal github">
@@ -233,7 +233,7 @@
             </div>
             <div class="modal_inner">
               <h5 class="semi_title">Visit her Github.</h5>
-              <button><a href="https://github.com/pcwadarong">OK</a></button>
+              <a href="https://github.com/pcwadarong">OK</a>
             </div>
           </div>
           <div class="modal code">
