🐛 fix that the last project didn't shown

--- a/index.html
+++ b/index.html
@@ -108,36 +108,17 @@
                 </div>
               </div>
               <div class="project">
+                <img src="../assets//images/coplant.svg" alt="logo" />
+                <div class="project_explanation">
+                  <p>Coplant</p>
+                  <div>companion plant selling site</div>
+                </div>
+              </div>
+              <div class="project">
                 <img src="../assets//images/chacha.svg" alt="logo" />
                 <div class="project_explanation">
                   <p>Cha Cha</p>
                   <div>Personal Tea Recommending Service with Backend</div>
-                </div>
-              </div>
-              <div class="project">
-                <img src="../assets//images/ac.svg" alt="logo" />
-                <div class="project_explanation">
-                  <p>scroll test</p>
-                  <div>test</div>
-                </div>
-              </div>
-              <div class="project">
-                <img src="../assets//images/ac.svg" alt="logo" />
-                <div class="project_explanation">
-                  <p>scroll test</p>
-                  <div>test</div>
-                </div>
-              </div>
-              <div class="project">
-                <img src="../assets//images/ac.svg" alt="logo" />
-                <div class="project_explanation">
-                  <p>scroll test</p>
-                  <div>
-                    test Lorem ipsum dolor, sit amet consectetur adipisicing
-                    elit. At qui quibusdam ea temporibus, quo id blanditiis
-                    dolor explicabo atque vero nihil rem quia deserunt hic.
-                    Similique repudiandae incidunt nobis voluptatum?
-                  </div>
                 </div>
               </div>
             </div>
@@ -156,10 +137,7 @@
               <h3 class="semi_title">Tech Stack</h3>
               <div class="folderlist">
                 <div class="folder">
-                  <img
-                    src="assets/images/folder_yellow.svg"
-                    alt="frontend"
-                  />
+                  <img src="assets/images/folder_yellow.svg" alt="frontend" />
                   <p>Frontend</p>
                 </div>
                 <div class="folder">
@@ -171,10 +149,7 @@
                   <p>Design</p>
                 </div>
                 <div class="folder">
-                  <img
-                    src="assets/images/folder_green.svg"
-                    alt="collaborate"
-                  />
+                  <img src="assets/images/folder_green.svg" alt="collaborate" />
                   <p>Collaborate</p>
                 </div>
                 <div class="folder">
