--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       type="text/css"
     />
+    <script type="module" src="./index.js"></script>
     <title>Chaen</title>
     <link rel="stylesheet" href="assets/styles/style.css" />
   </head>
@@ -136,27 +137,31 @@
             <div class="tech_folders">
               <h3 class="semi_title">Tech Stack</h3>
               <div class="folderlist">
-                <div class="folder">
-                  <img src="assets/images/folder_yellow.svg" alt="frontend" />
+                <div class="folder" id="tech_front">
+                  <img
+                    src="assets/images/folder_yellow.svg"
+                    alt="frontend"
+                    onclick=""
+                  />
                   <p>Frontend</p>
                 </div>
-                <div class="folder">
+                <div class="folder" id="tech_backend">
                   <img src="assets/images/folder_blue.svg" alt="backend" />
                   <p>Backend</p>
                 </div>
-                <div class="folder">
+                <div class="folder" id="tech_design">
                   <img src="assets/images/folder_yellow.svg" alt="design" />
                   <p>Design</p>
                 </div>
-                <div class="folder">
+                <div class="folder" id="tech_collaborate">
                   <img src="assets/images/folder_green.svg" alt="collaborate" />
                   <p>Collaborate</p>
                 </div>
-                <div class="folder">
+                <div class="folder" id="tech_others">
                   <img src="assets/images/folder_red.svg" alt="others" />
                   <p>Others</p>
                 </div>
-                <div class="folder">
+                <div class="folder" id="tech_certificate">
                   <img
                     src="assets/images/folder_yellow.svg"
                     alt="certificate"
@@ -167,18 +172,7 @@
             </div>
             <div class="techlist_container">
               <h4>Frontend</h4>
-              <ul class="techlist">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>TypeScript</li>
-                <li>React</li>
-                <li>Next.js</li>
-                <li>Recoil</li>
-                <li>Zustand</li>
-                <li>Tailwind CSS</li>
-                <li>SASS</li>
-              </ul>
+              <ul id="techlist"></ul>
             </div>
           </div>
         </div>
