🐛 change part name, correct wrong letter

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                   />
                   <p>Frontend</p>
                 </div>
-                <div class="folder" id="tech_backend">
+                <div class="folder" id="tech_back">
                   <img src="assets/images/folder_blue.svg" alt="backend" />
                   <p>Backend</p>
                 </div>
@@ -171,8 +171,8 @@
               </div>
             </div>
             <div class="techlist_container">
-              <h4>Frontend</h4>
-              <ul id="techlist"></ul>
+              <h4 id="tech_part"></h4>
+              <ul id="tech_list"></ul>
             </div>
           </div>
         </div>
