📝 add comment of each js page

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
               <img src="assets/images/left_arrow.svg" alt="left arrow" />
               <img src="assets/images/right_arrow.svg" alt="right arrow" />
               <div>
-                <input type="text" />
-                <button>
+                <input type="text" id="search"/>
+                <button id="search_btn">
                   <img src="assets/images/search.svg" alt="search icon" />
                 </button>
               </div>
