--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       rel="stylesheet"
       type="text/css"
     />
-    <script type="module" src="../js/index.js"></script>
+    <script type="module" src="./js/index.js"></script>
     <title>Chaen</title>
-    <link rel="stylesheet" href="../assets/styles/style.css" />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
   <body>
     <nav>
       <a href="#page1">About Me </a>
       <a href="#page2">Projects</a>
       <a href="#page3">Contact</a>
-      <a href="../docs/resume.html" target='_blank'>Resume</a>
+      <a href="./docs/resume.html" target="_blank">Resume</a>
     </nav>
     <div class="scroll-container">
       <section id="page1">
@@ -74,15 +74,15 @@
               </ul>
             </div>
             <div class="search_container">
-              <img src="../assets/images/left_arrow.svg" alt="left arrow" />
-              <img src="../assets/images/right_arrow.svg" alt="right arrow" />
+              <img src="./assets/images/left_arrow.svg" alt="left arrow" />
+              <img src="./assets/images/right_arrow.svg" alt="right arrow" />
               <div>
-                <input type="text" id="search"/>
+                <input type="text" id="search" />
                 <button id="search_btn">
-                  <img src="../assets/images/search.svg" alt="search icon" />
+                  <img src="./assets/images/search.svg" alt="search icon" />
                 </button>
               </div>
-              <img src="../assets/images/star.svg" alt="star(deco)" />
+              <img src="./assets/images/star.svg" alt="star(deco)" />
             </div>
             <div class="projects"></div>
             <div id="project_modal_background">
@@ -102,8 +102,10 @@
                       <p id="project_description"></p>
                     </div>
                     <div class="project_links">
-                      <a href="" id="project_github" target='_blank'>Github</a>
-                      <a href="" id="project_website" target='_blank'>Website</a>
+                      <a href="" id="project_github" target="_blank">Github</a>
+                      <a href="" id="project_website" target="_blank"
+                        >Website</a
+                      >
                     </div>
                   </div>
                   <span class="stack_title">Tech Stack</span>
@@ -144,31 +146,34 @@
               <div class="folderlist">
                 <div class="folder" id="tech_front">
                   <img
-                    src="../assets/images/folder_yellow.svg"
+                    src="./assets/images/folder_yellow.svg"
                     alt="frontend"
                     onclick=""
                   />
                   <p>Frontend</p>
                 </div>
                 <div class="folder" id="tech_back">
-                  <img src="../assets/images/folder_blue.svg" alt="backend" />
+                  <img src="./assets/images/folder_blue.svg" alt="backend" />
                   <p>Backend</p>
                 </div>
                 <div class="folder" id="tech_design">
-                  <img src="../assets/images/folder_yellow.svg" alt="design" />
+                  <img src="./assets/images/folder_yellow.svg" alt="design" />
                   <p>Design</p>
                 </div>
                 <div class="folder" id="tech_collaborate">
-                  <img src="../assets/images/folder_green.svg" alt="collaborate" />
+                  <img
+                    src="./assets/images/folder_green.svg"
+                    alt="collaborate"
+                  />
                   <p>Collaborate</p>
                 </div>
                 <div class="folder" id="tech_others">
-                  <img src="../assets/images/folder_red.svg" alt="others" />
+                  <img src="./assets/images/folder_red.svg" alt="others" />
                   <p>Others</p>
                 </div>
                 <div class="folder" id="tech_certificate">
                   <img
-                    src="../assets/images/folder_yellow.svg"
+                    src="./assets/images/folder_yellow.svg"
                     alt="certificate"
                   />
                   <p>Certificate</p>
@@ -194,7 +199,7 @@
             </div>
             <div class="modal_inner">
               <h5 class="semi_title">Look around resume.</h5>
-              <a href="../docs/resume.html" target='_blank'>OK</a>
+              <a href="./docs/resume.html" target="_blank">OK</a>
             </div>
           </div>
           <div class="modal github">
@@ -207,7 +212,7 @@
             </div>
             <div class="modal_inner">
               <h5 class="semi_title">Visit her Github.</h5>
-              <a href="https://github.com/pcwadarong" target='_blank'>OK</a>
+              <a href="https://github.com/pcwadarong" target="_blank">OK</a>
             </div>
           </div>
           <div class="modal code">
@@ -249,7 +254,7 @@
                 </div>
                 <div class="info">
                   And my blog address! <br />
-                  <a href="https://velog.io/@pcwadarong" target='_blank'
+                  <a href="https://velog.io/@pcwadarong" target="_blank"
                     >https://velog.io/@pcwadarong</a
                   >
                 </div>
